--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 src/Makefile linguist-detectable=false
-src/*.pl linguist-detectable=true
-src/*.c linguist-detectable=true
+src/*.mk linguist-detectable=false
+src/Mk/* linguist-detectable=false
